<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/takeNote"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="128dp"
        android:text="@string/take_note"
        app:layout_constraintBottom_toBottomOf="@+id/takePhoto"
        app:layout_constraintStart_toStartOf="@+id/takePhoto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <Button
        android:id="@+id/takePhoto"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/take_photo"
        app:layout_constraintBottom_toTopOf="@+id/recordVoice"
        app:layout_constraintStart_toStartOf="@+id/recordVoice" />

    <Button
        android:id="@+id/recordVoice"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:text="@string/record_voice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/lookAtNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginBottom="54dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>